<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.personalbest.NewGoalActivity">

    <Button
        android:id="@+id/accept_custom_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="380dp"
        android:text="@string/pick_custom_goal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="328dp"
        android:text="@string/custom_goal"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/custom_steps"
        android:layout_width="208dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="295dp"
        android:autofillHints="@string/custom_goal_hint"
        android:hint="@string/custom_goal_hint"
        android:inputType="number"
        android:text="@string/blank"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="301dp"
        android:layout_height="134dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/goal_reached"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="120dp"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="120dp"
        android:text="@string/no"
        app:layout_constraintStart_toStartOf="@+id/yesButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="193dp"
        android:text="@string/suggested_goal"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/suggested_steps"
        android:layout_width="164dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="192dp"
        android:text="@string/blank"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/accept_suggested_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="247dp"
        android:text="@string/pick_suggested_goal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
