<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/text_message"
        android:background="#ECEFF1"
        android:fillViewport="true"
        android:overScrollMode="always">

        <TextView
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_will_appear_here"
            android:padding="10dp"
            android:scrollbars="vertical" />
    </ScrollView>

    <EditText
        android:id="@+id/text_message"
        android:inputType="text"
        android:autofillHints=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_send"
        android:layout_margin="5dp"
        android:hint="@string/message" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="0dp"
        android:text="@string/send" />

    <Button
        android:id="@+id/btn_go_back"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="0dp"
        android:text="@string/go_back" />

</RelativeLayout>

