<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.android.personalbest.MonthlyBarChartActivity">

    <View
        android:id="@+id/cyanRectangle"
        android:layout_width="15dp"
        android:layout_height="11dp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="75dp"
        android:background="@color/Cyan"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/homebutton"
        app:layout_constraintTop_toBottomOf="@id/nonintentional"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/greenRectangle"
        android:layout_width="14dp"
        android:layout_height="12dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="55dp"
        android:background="@color/green"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/intentional" />


    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/barChart"
        android:layout_width="320dp"
        android:layout_height="350dp"
        android:layout_marginTop="70dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homebutton"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/home"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/intentional"
        app:layout_constraintTop_toBottomOf="@+id/barChart" />

    <TextView
        android:id="@+id/nonintentional"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="30dp"
        android:text="@string/nonIntentional"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/homebutton"
        app:layout_constraintTop_toBottomOf="@id/barChart" />

    <TextView
        android:id="@+id/intentional"
        android:layout_width="70dp"
        android:layout_height="18dp"
        android:layout_marginTop="8dp"
        android:text="@string/intentional"
        app:layout_constraintTop_toBottomOf="@+id/barChart"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/totalsteps"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/totalSteps"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/barChart"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totaltime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/totalTime"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/barChart"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/averagemph"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="100dp"
        android:text="@string/averageMPH"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/barChart"
        app:layout_constraintLeft_toRightOf="@id/totaltime" />

    <TextView
        android:id="@+id/totaldistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/totalDistance"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/averagemph"
        app:layout_constraintLeft_toRightOf="@id/totalsteps" />

    <TextView
        android:id="@+id/stepsnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@id/barChart"
        app:layout_constraintLeft_toRightOf="@id/totalsteps"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="23dp"
        android:text="@string/emptyString"
        app:layout_constraintLeft_toRightOf="@id/totaltime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distancenumber"
        android:layout_width="9dp"
        android:layout_height="19dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/emptyString"
        app:layout_constraintBottom_toTopOf="@id/mphnumber"
        app:layout_constraintLeft_toRightOf="@id/totaldistance"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mphnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="16dp"
        android:text="@string/emptyString"
        app:layout_constraintBottom_toTopOf="@id/barChart"
        app:layout_constraintLeft_toRightOf="@id/averagemph"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <TextView
        android:id="@+id/goaltext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/goalText"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="2dp" />

    <TextView
        android:id="@+id/goalnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="100dp"
        android:text="@string/emptyString"
        app:layout_constraintLeft_toRightOf="@id/goaltext"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
