<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.personalbest.FriendListActivity">

    <ListView
        android:id="@+id/friendListView"
        android:layout_width="411dp"
        android:layout_height="509dp"
        app:layout_constraintBottom_toTopOf="@+id/returnHomeBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriBtn" />

    <Button
        android:id="@+id/returnHomeBtn"
        android:layout_width="406dp"
        android:layout_height="65dp"
        android:text="@string/return_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendListView" />

    <Button
        android:id="@+id/addFriBtn"
        android:layout_width="155dp"
        android:layout_height="48dp"
        android:layout_marginTop="90dp"
        android:text="@string/add_friend_btn"
        app:layout_constraintBottom_toTopOf="@+id/friendListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/friendListTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/friendListTitle"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/friendListTitle"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/friendListView"
        app:layout_constraintEnd_toStartOf="@+id/addFriBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
